testetc/slurm-28673738.out
  File "/global/homes/s/seanjx/gigalens/testetc/nanolens.py", line 128
    for ii in range(np.shape(allChi)[0])
                                        ^
SyntaxError: expected ':'
  File "/global/homes/s/seanjx/gigalens/testetc/nanolens.py", line 128
    for ii in range(np.shape(allChi)[0])
                                        ^
SyntaxError: expected ':'
srun: error: nid001004: task 0: Exited with exit code 1
srun: Terminating StepId=28673738.0
srun: error: nid001005: task 1: Exited with exit code 1
